# stock-ia-forecasting

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  scheduler.py
.github/workflows/: deploy.yml
