[project]
name = "forecast-stock-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "prophet>=1.1.6",
    "pydantic>=2.11.4",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
